--- a/index.html
+++ b/index.html
@@ -7,33 +7,47 @@
     <link rel="icon" href="img/zuehlke_logo.jpg">
     <link rel="stylesheet" href="css/theme/zuehlke-index.css">
 
-    <title>Zühlke Reveal Template</title>
+    <title>Kotlin Workshop</title>
 </head>
 <body>
 <header>
-    <h1>Zühlke Reveal Template</h1>
-    <h2>by <span class="nowrap">Nick Payne</span> &amp; <span class="nowrap">Nicolas Oeschger</span></h2>
+    <h1>Kotlin - from Beginner to Expert</h1>
+    <h2>by <span class="nowrap">Nick Payne</span> &amp; <span class="nowrap">Celine Heldner</span></h2>
 </header>
 
 <section>
     <a href="slides/01_Intro.html" target="_blank">
-        <h2>01 Example Content</h2>
-        <ul>
-            <li>Bla</li>
-            <li>Blubb</li>
-            <li>Cool</li>
-            <li>Stuff</li>
-        </ul>
+        <h2>Intro</h2>
     </a>
 </section>
 <section>
     <a href="slides/02_Basics.html" target="_blank">
-        <h2>02 Example Content 2</h2>
+        <h2>Basics</h2>
         <ul>
-            <li>Bla</li>
-            <li>Blubb</li>
-            <li>Cool</li>
-            <li>Stuff</li>
+            <li>Hello World</li>
+            <li>Functions and Variables</li>
+            <li>Strings</li>
+            <li>Classes and Properties</li>
+            <li>The "when" Construct</li>
+            <li>Packages and Files</li>
+            <li>Exceptions</li>
+        </ul>
+    </a>
+    <a href="slides/02_Basics.html" target="_blank">
+        <h2>Kotlin Sugar</h2>
+        <ul>
+            <li>Ranges and Progressions</li>
+            <li>"""Multiline Strings"""</li>
+        </ul>
+    </a>
+    <a href="slides/02_Basics.html" target="_blank">
+        <h2>Functions</h2>
+        <ul>
+            <li>Named Arguments</li>
+            <li>Default Values</li>
+            <li>Extension functions and properties</li>
+            <li>Varargs</li>
+            <li>Infix Functions</li>
         </ul>
     </a>
 </section>
