--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             <li>Exceptions</li>
         </ul>
     </a>
+</section>
+<section>
     <a href="slides/02_Basics.html" target="_blank">
         <h2>Kotlin Sugar</h2>
         <ul>
@@ -40,6 +42,8 @@
             <li>"""Multiline Strings"""</li>
         </ul>
     </a>
+</section>
+<section>
     <a href="slides/02_Basics.html" target="_blank">
         <h2>Functions</h2>
         <ul>
