--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <ul>
             <li>Ranges and Progressions</li>
             <li>"""Multiline Strings"""</li>
+            <li>Statements and Expressions</li>
         </ul>
     </a>
 </section>
@@ -52,6 +53,39 @@
             <li>Extension functions and properties</li>
             <li>Varargs</li>
             <li>Infix Functions</li>
+        </ul>
+    </a>
+</section>
+<section>
+    <a href="slides/02_Basics.html" target="_blank">
+        <h2>Classes, Objects and Interfaces</h2>
+        <ul>
+            <li>Data Classes</li>
+            <li>Constructors and Initializers</li>
+            <li>Objects & Singletons</li>
+            <li>Companion Objects</li>
+            <li>Infix Functions</li>
+        </ul>
+    </a>
+</section>
+<section>
+    <a href="slides/02_Basics.html" target="_blank">
+        <h2>Functional Programming</h2>
+        <ul>
+            <li>Lambdas</li>
+            <li>Sequences</li>
+            <li>With, Apply</li>
+        </ul>
+    </a>
+</section>
+<section>
+    <a href="slides/02_Basics.html" target="_blank">
+        <h2>The Kotlin Type System</h2>
+        <ul>
+            <li>Nullability, the Elvis Operator and let</li>
+            <li>Primitives</li>
+            <li>Any, Unit</li>
+            <li>Arrays</li>
         </ul>
     </a>
 </section>
